--- a/src/main/resources/environment/product/databases.properties
+++ b/src/main/resources/environment/product/databases.properties
@@ -1,7 +1,11 @@
-driverClasss=com.mysql.jdbc.Driver
+
+driverClass=com.mysql.jdbc.Driver
 jdbcUrl=jdbc:mysql://localhost/db_file_prod?reconnect=true&autoReconnect=true&characterEncoding=UTF-8
+
+#product
 username=root
-password=321321
+password=Tow=1+1#
+
 
 #\u5B9A\u4E49\u521D\u59CB\u8FDE\u63A5\u6570
 initialSize=0
