--- a/pom.xml
+++ b/pom.xml
@@ -84,13 +84,6 @@
 
 
   <dependencies>
-    <!-- 添加jstl依赖 -->
-    <dependency>
-      <groupId>jstl</groupId>
-      <artifactId>jstl</artifactId>
-      <version>1.2</version>
-    </dependency>
-
     <dependency>
       <groupId>javax</groupId>
       <artifactId>javaee-api</artifactId>
@@ -103,6 +96,12 @@
       <artifactId>junit</artifactId>
       <version>4.11</version>
       <!-- 指定范围，在测试时才会加载 -->
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-test</artifactId>
+      <version>4.2.5.RELEASE</version>
       <scope>test</scope>
     </dependency>
 
@@ -153,12 +152,6 @@
       <version>${spring.version}</version>
     </dependency>
 
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-test</artifactId>
-      <version>${spring.version}</version>
-    </dependency>
-
     <!-- 添加mybatis依赖 -->
     <dependency>
       <groupId>org.mybatis</groupId>
@@ -184,13 +177,6 @@
       <groupId>commons-dbcp</groupId>
       <artifactId>commons-dbcp</artifactId>
       <version>1.2.2</version>
-    </dependency>
-
-    <!-- 添加fastjson -->
-    <dependency>
-      <groupId>com.alibaba</groupId>
-      <artifactId>fastjson</artifactId>
-      <version>1.1.41</version>
     </dependency>
 
     <!-- 添加日志相关jar包 -->
@@ -265,18 +251,9 @@
       <artifactId>owlMagicUtil</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
+
   </dependencies>
   <build>
     <finalName>owlMagicFile</finalName>
-      <plugins>
-          <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-compiler-plugin</artifactId>
-              <configuration>
-                  <source>1.7</source>
-                  <target>1.7</target>
-              </configuration>
-          </plugin>
-      </plugins>
   </build>
 </project>
