--- a/pom.xml
+++ b/pom.xml
@@ -235,9 +235,9 @@
     </dependency>
 
     <dependency>
-      <groupId>owl.magic.util</groupId>
+      <groupId>com.github.engwen</groupId>
       <artifactId>owlMagicUtil</artifactId>
-      <version>2.1-SNAPSHOT</version>
+      <version>2.3</version>
     </dependency>
 
   </dependencies>
